--- a/coming-soon.html
+++ b/coming-soon.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png"> 
 </head>
 <body>
+    <div id="page-content-wrapper"><
     
     <div id="banner-container">
         <img src="images/SOL!T3R.png" alt="Website Banner">
@@ -35,18 +36,18 @@
             <a href="releases.html" class="button">Back to Releases</a>
         </div>
     </main>
-
-    <footer id="main-footer">
-        <p class="footer-text">
-            &copy; 2025 SOL!T3R. All Rights Reserved. | Site designed and coded by SOL!T3R.
-        </p>
-        <div class="social-links">
-            <a href="#" target="_blank">Spotify</a>
-            <span>|</span>
-            <a href="#" target="_blank">Bandcamp</a>
-            <span>|</span>
-            <a href="#" target="_blank">Instagram</a>
-        </div>
-    </footer>
+</div>
+<footer id="main-footer">
+    <p class="footer-text">
+        &copy; 2025 SOL!T3R. All Rights Reserved. | Site designed and coded by SOL!T3R.
+    </p>
+    <div class="social-links">
+        <a href="#" target="_blank">Spotify</a>
+        <span>|</span>
+        <a href="#" target="_blank">Bandcamp</a>
+        <span>|</span>
+        <a href="#" target="_blank">Instagram</a>
+    </div>
+</footer>
 </body>
 </html>
