--- a/releases.html
+++ b/releases.html
@@ -39,10 +39,10 @@
         </div>
         
         <div class="release-item">
-            <a href="release-3.html">
-                <img src="images/release-cover-3.png" alt="Album Cover Title 3">
+            <a href="coming.html">
+                <img src="images/toosoon.png" alt="Album Cover Title 3">
             </a>
-            <p>Title of Single/EP/Album 3</p>
+            <p>coming soon!</p>
         </div>
         
         </main>
