--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
                 <div class="slideshow" id="slideshow-left">
                     <div class="slide-images">
                         <div class="slide fade"><img src="images/release-cover-1.png" alt="WayzOfWind.flac"></div>
-                        <div class="slide fade"><img src="idk.png" alt="Art 2 L"></div>
+                        <div class="slide fade"><img src="images/untitled....png" alt="Art 2 L"></div>
                         <div class="slide fade"><img src="images/idkV2.png" alt="TRIMESTER"></div>
                         </div>
                 </div>
@@ -38,8 +38,8 @@
                 <div class="slideshow" id="slideshow-right">
                     <div class="slide-images">
                         <div class="slide fade"><img src="images/idk.png" alt="CoolioRetro"></div>
-                        <div class="slide fade"><img src="images/art-R-2.png" alt="Art 2 R"></div>
-                        <div class="slide fade"><img src="images/art-R-3.png" alt="Art 3 R"></div>
+                        <div class="slide fade"><img src="images/funbunz.png" alt="Art 2 R"></div>
+                        <div class="slide fade"><img src="images/dubbub.png" alt="Art 3 R"></div>
                         </div>
                 </div>
                 
@@ -64,16 +64,28 @@
                 <p>TRIMESTER</p>
             </div>
                         <div class="gallery-item">
-                <img src="images/art-D.png" alt="Art A">
-                <p>Art Title A</p>
+                <img src="images/funbunz.png" alt="Art A">
+                <p>3@rlyM0rn1ng</p>
             </div>
             <div class="gallery-item">
-                <img src="images/art-E.png" alt="Art B">
-                <p>Art Title B</p>
+                <img src="images/untitled....png" alt="Art B">
+                <p>"untitled.."</p>
             </div>
             <div class="gallery-item">
-                <img src="images/art-F.png" alt="Art C">
-                <p>Art Title C</p>
+                <img src="images/dubbub.png" alt="Art C">
+                <p>H3RT7</p>
+            </div>
+                        <div class="gallery-item">
+                <img src="images/cut-chop.png" alt="Art C">
+                <p>CUT&CHOP</p>
+            </div>
+                        <div class="gallery-item">
+                <img src="images/moreart.png" alt="Art C">
+                <p>coming soon!</p>
+            </div>
+                        <div class="gallery-item">
+                <img src="images/moreart.png" alt="Art C">
+                <p>coming soon!</p>
             </div>
             </div>
 
