--- a/release-1.html
+++ b/release-1.html
@@ -32,9 +32,9 @@
             <div class="tracklist">
                 <h3>Tracklist</h3>
                 <ol>
-                    <li><a href="[SPOTIFY_RELEASE_URL_HERE]" target="_blank">song title A</a></li>
+                    <li><a href="[SPOTIFY_RELEASE_URL_HERE]" target="_blank">entr0p7</a></li>
                     
-                    <li><a href="[SPOTIFY_RELEASE_URL_HERE]" target="_blank">Song Title B</a></li>
+                    <li><a href="[SPOTIFY_RELEASE_URL_HERE]" target="_blank">HardWinds.mp3</a></li>
                     
                     </ol>
             </div>
