--- a/release-1.html
+++ b/release-1.html
@@ -61,7 +61,7 @@
     <div class="social-links">
         <a href="#" target="_blank">Spotify</a>
         <span>|</span>
-        <a href="#" target="_blank">Bandcamp</a>
+        <a href="#" target="_blank">Youtube</a>
         <span>|</span>
         <a href="#" target="_blank">Instagram</a>
     </div>
