--- a/about.html
+++ b/about.html
@@ -51,11 +51,11 @@
         &copy; 2025 SOL!T3R. All Rights Reserved. | Site designed and coded by SOL!T3R.
     </p>
     <div class="social-links">
-        <a href="#" target="_blank">Spotify</a>
+        <a href="NOT-OUT-YET" target="_blank">Spotify</a>
         <span>|</span>
-        <a href="#" target="_blank">Youtube</a>
+        <a href="https://www.youtube.com/channel/UCxP1Uo_v8Bxov5bc2Alte0w" target="_blank">Youtube</a>
         <span>|</span>
-        <a href="#" target="_blank">Instagram</a>
+        <a href="https://www.instagram.com/soli.t3r/" target="_blank">Instagram</a>
     </div>
 </footer>
 
